# dominator-workers-fluent-auth

./: .gitignore  Cargo.toml  LICENSE  README.md  Taskfile.yml  package.json
db/migrations/prod/: 0001_init.sql
docs/: API.md  AUTH.md  COMMANDS.md  CUSTOMIZATION.md  ROUTING.md  SETUP.md
frontend/: Cargo.toml  index.html
frontend/src/: api_ext.rs  auth.rs  config.rs  error.rs  lib.rs  locale.rs  prelude.rs  route.rs
frontend/src/atoms/: buttons.rs  input.rs  mod.rs
frontend/src/atoms/dynamic_svg/: more_arrow.rs
frontend/src/locale/error/: en.ftl
frontend/src/locale/landing/: en.ftl  he.ftl
frontend/src/page/: dashboard.rs  landing.rs  mod.rs  not_found.rs
frontend/src/page/landing/: auth.rs  header.rs  welcome.rs
frontend/src/page/landing/auth/: openid.rs  password_reset.rs  register.rs  signin.rs  verify_email.rs
frontend/src/theme/: stylesheet.rs
shared/: Cargo.toml
shared/src/: api.rs  auth.rs  lib.rs  user.rs
shared/src/api/: auth.rs
shared/src/backend/: mod.rs  result.rs  route.rs
shared/src/backend/worker/: convert.rs  ext.rs  mod.rs
shared/src/frontend/: route.rs
workers/api/: Cargo.toml  dev.vars.example  wrangler.toml
workers/api/src/: api_ext.rs  config.rs  context.rs  lib.rs  mailer.rs  not_found.rs  prelude.rs  route.rs
workers/api/src/auth/: handler.rs  mod.rs  user.rs
workers/api/src/auth/durable_objects/: mod.rs  openid.rs  token.rs
workers/api/src/auth/handler/: openid.rs  util.rs
workers/api/src/db/: user.rs
workers/api/src/helpers/: cloudflare.rs  mod.rs  web_sys.rs
