[workspace]
members = [
    "frontend",
    "workers/api",
    "shared",
]
resolver="2"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = false
strip = true

[profile.dev.package."*"]
opt-level = 3