[package]
name = "api"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = "1.0.197"
serde_json = "1.0.114"
# worker = { path="../local-fork/workers-rs/worker", features = ["d1"], optional = true }
worker = { version = "0.1.0", features = ["d1"]}
shared = {path="../../shared", features = ["worker"]}
rand = "0.8.5"
base64 = "0.22.0"
getrandom = { version = "0.2.12", features = ["js"] }
sha2 = "0.10.8"
uuid = { version = "1.8.0", features = ["v7", "serde", "js"]}
futures = "0.3.30"
anyhow = "1.0.81"
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
once_cell = "1.19.0"
http = "1.1.0"
openidconnect = { version = "3.5.0", default-features = false }
async-trait = "0.1.79"
unic-langid = { version = "0.9.4", features = ["macros"] }

[features]
default=["console_error_panic_hook"]


[dependencies.web-sys]
version = "0.3.69"
features = [
    "Request",
    "RequestInit",
    "Response",
    "ResponseInit",
    "Url",
    "Headers",
    "UrlSearchParams",
    "RequestCredentials"
]